[tool.poetry]
name = "periodicity_detection"
version = "0.1.0"
description = "Repository to keep experiments on different methods of periodicity detection for network traffic."
authors = ["Arthur Jacobs <asjacobs@inf.ufrgs.br>"]

[tool.poetry.dependencies]
python = "^3.6.1"
matplotlib = "^3.3.0"
pywavelets = "^1.1.1"
pyastronomy = "^0.15.1"
keras = "^2.4.3"
tensorflow = "^2.3.0"
scikit-learn = "^0.23.1"
dpkt = "^1.9.3"
pandas = "^1.1.0"
scipy = "1.4.1"
numpy = "1.18.5"
rootpath = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
